--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
 		"axios": "^1.7.5",
 		"chart.js": "^4.4.3",
 		"dayjs": "^1.11.11",
+		"firebase": "^10.13.1",
 		"ky": "^1.4.0",
 		"lottie-react": "^2.4.0",
 		"mantine-react-table": "2.0.0-alpha.5",
